--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
             </div>
             <div class="conteudo-principal-a">
                 <div class="conteudo-sobre">
-                    <span id="sobre"><h2 class="titulos">Quem somos</h2>
-                    <span><img class="conteudo-sobre-yt" src="./img/icon-youtube.png"></span><p class="sobre-p">Somos um canal focado na criação de vídeos tutoriais no YouTube sobre o tema de automações para <strong>Android (Automate) e Windows(AutoHotKey e Python).</strong><br/>
-                    </br>Temos como meta principal ajudar o máximo de pessoas possível.</br></br></br></p>
-                            <p class="sobre-p">Além de vídeos, atendemos encomendas de automações para as plataformas Android e Windows através do nosso email.</br></br>
-                            <strong class="sobre-p-contato">Entre em contato: automatetutoriais@hotmail.com</strong></p></span>
+                    <span class="conteudo-sobre-tituloa" id="sobre"><h2 class="titulos">Quem somos</h2></span>
+                    <div class="conteudo-sobre-iconyt"><a href="https://www.youtube.com/c/Automa%C3%A7%C3%B5esTutoriais" target="_blank"><img class="conteudo-sobre-yt" src="./img/icon-youtube.png"></a></div>
+                    <div class="conteudo-sobre-main">
+                        <p class="sobre-p">Somos um canal focado na criação de vídeos tutoriais no YouTube sobre o tema de automações para <strong>Android (Automate) e Windows(AutoHotKey e Python).</strong><br/>
+                        </br>Temos como meta principal ajudar o máximo de pessoas possível.</br></br></br></p>
+                        <p class="sobre-p">Além de vídeos, atendemos encomendas de automações para as plataformas Android e Windows através do nosso email.</br></br>
+                        <strong class="sobre-p-contato">Entre em contato: <a class="link-email" href="mailto:automatetutoriais@hotmail.com">automatetutoriais@hotmail.com</a></strong></p>
+                    </div>
                 </div>
                 <div class="conteudo-blog">
                     <span id="blog"><h2 class="titulos">Blog</h2></span>
