--- a/index.html
+++ b/index.html
@@ -43,22 +43,46 @@
             <div class="conteudo-principal-a">
                 <div class="conteudo-sobre">
                     <span class="conteudo-sobre-tituloa" id="sobre"><h2 class="titulos">Quem somos</h2></span>
-                    <div class="conteudo-sobre-iconyt"><a href="https://www.youtube.com/c/Automa%C3%A7%C3%B5esTutoriais" target="_blank"><img class="conteudo-sobre-yt" src="./img/icon-youtube.png"></a></div>
-                    <div class="conteudo-sobre-main">
-                        <p class="sobre-p">Somos um canal focado na criação de vídeos tutoriais no YouTube sobre o tema de automações para <strong>Android (Automate) e Windows(AutoHotKey e Python).</strong><br/>
-                        </br>Temos como meta principal ajudar o máximo de pessoas possível.</br></br></br></p>
-                        <p class="sobre-p">Além de vídeos, atendemos encomendas de automações para as plataformas Android e Windows através do nosso email.</br></br>
+                    <div class="conteudo-sobre-init">
+                        <div class="conteudo-sobre-iconyt"><a href="https://www.youtube.com/c/Automa%C3%A7%C3%B5esTutoriais" target="_blank"><img class="conteudo-sobre-yt" src="./img/icon-youtube.png"></a></div>
+                        <p class="sobre-p">Somos um canal focado na criação de vídeos tutoriais no YouTube sobre o tema de automações para <strong>Android (Automate) e Windows(AutoHotKey e Python).</strong></p>
+                    </div>
+                    <div class="conteudo-sobre-meta">
+                        <p class="sobre-p-meta">Temos como meta principal ajudar o máximo de pessoas possível.</p>
+                    </div>
+                    <div class="conteudo-sobre-footer">
+                        <article class="conteudo-sobre-iconem"><a href="mailto:automatetutoriais@hotmail.com"><img class="conteudo-sobre-email" src="/img/icon-email.png"></a>
+                        </article>
+                        <p class="sobre-p">Além de vídeos, atendemos encomendas de automações para as plataformas Android e Windows através do nosso email.</br>
                         <strong class="sobre-p-contato">Entre em contato: <a class="link-email" href="mailto:automatetutoriais@hotmail.com">automatetutoriais@hotmail.com</a></strong></p>
                     </div>
                 </div>
                 <div class="conteudo-blog">
                     <span id="blog"><h2 class="titulos">Blog</h2></span>
-                    <article class="conteudo-blog-videos">Incluir imagem e link de playlist</article>
-                    <article class="conteudo-blog-videos">Incluir imagem e link de playlist</article>
-                    <article class="conteudo-blog-videos">Incluir imagem e link de playlist</article>
+                    <h2 class="conteudo-blog-sub">Veja uma de nossas playlists:</h2></br>
+                    <div class="conteudo-blog-articles">
+                        <article class="conteudo-blog-videos">
+                            <a href="#">
+                                <img class="conteudo-blog-thumb" src="./img/ahk-playlist.jpg">
+                                <p class="conteudo-blog-nomeplaylist">AutoHotKey (Windows)</p>
+                            </a>
+                        </article>
+                        <article class="conteudo-blog-videos">
+                            <a href="#">
+                                <img class="conteudo-blog-thumb" src="./img/python-playlist.jpg">
+                                <p class="conteudo-blog-nomeplaylist">Python</p>
+                            </a>
+                        </article>
+                        <article class="conteudo-blog-videos">
+                            <a href="#">
+                                <img class="conteudo-blog-thumb" src="./img/playlist-android.jpg">
+                                <p class="conteudo-blog-nomeplaylist">Android Automate</p>
+                            </a>
+                        </article>
+                    </div>
                 </div>
                 <div class="conteudo-doacoes">
-                    <span id="doacoes">Doações</span>
+                    <span id="doacoes" class="titulos">Doações</span>
                     <div class="conteudo-doacoes-site">
                         <h2>Site</h2>
                         <p>Precisamos manter a hospedagem desse site.</p>
@@ -87,7 +111,7 @@
                     </div>
                 </div>
                 <div class="conteudo-contato">
-                    <span id="contato"><h2>Fale Conosco</h2></span>
+                    <span id="contato" class="titulos">Fale Conosco</span>
                     <h3>Email</h3>
                     <a>automatetutoriais@hotmail.com</a>
                     <h3>Telegram</h3>
