inicio menu doacoes

--- a/index.html
+++ b/index.html
@@ -83,31 +83,33 @@
                 </div>
                 <div class="conteudo-doacoes">
                     <span id="doacoes" class="titulos">Doações</span>
-                    <div class="conteudo-doacoes-site">
-                        <h2>Site</h2>
-                        <p>Precisamos manter a hospedagem desse site.</p>
-                    </div>
-                    <div class="conteudo-doacoes-videos">
-                        <h2>+Videos</h2>
-                        <p>Queremos nos dedicar mais a fazer vídeos no YouTube.</p>
-                    </div>
-                    <div class="conteudo-doacoes-pedidos">
-                        <h2>+Pedidos</h2>
-                        <p>Queremos também atender mais encomendas.</p>
-                    </div>
-                    <div class="conteudo-doacoes-doacoes">
-                        <h2>Doação</h2>
-                        <p>Isso só será possível com sua doação, pois no momento necessitamos de um emprego paralelo.</p>
-                    </div>
-                    <div class="conteudo-doacoes-presente">
-                        <h2>Presente</h2>
-                        <p>Fez sua doação? Que tal receber um presente nosso?<br/>
-                            Basta enviar um e-mail para autusuporte@gmail.com com o valor da doação e a mensagem: "quero o presente".</p>
-                    </div>
-                    <div class="conteudo-doacoes-pix">
-                        <article>Incluir imagem do pix</article>
-                        <p>autusuporte@gmail.com<br/>
-                            Essa é nossa chave PIX, gerada para agilizar todo o processo de transferência bancária, tornando-a imediata e isenta de custos.</p>
+                    <div class="conteudo-doacoes-cont">
+                        <div class="conteudo-doacoes-site">
+                            <h2 class="conteudo-doacoes-sbt">Site</h2>
+                            <p class="conteudo-doacoes-p">Precisamos manter a hospedagem desse site.</p>
+                        </div>
+                        <div class="conteudo-doacoes-videos">
+                            <h2 class="conteudo-doacoes-sbt">+Videos</h2>
+                            <p class="conteudo-doacoes-p">Queremos nos dedicar mais a fazer vídeos no YouTube.</p>
+                        </div>
+                        <div class="conteudo-doacoes-pedidos">
+                            <h2 class="conteudo-doacoes-sbt">+Pedidos</h2>
+                            <p class="conteudo-doacoes-p">Queremos também atender mais encomendas.</p>
+                        </div>
+                        <div class="conteudo-doacoes-doacoes">
+                            <h2 class="conteudo-doacoes-sbt">Doação</h2>
+                            <p class="conteudo-doacoes-p">Isso só será possível com sua doação, pois no momento necessitamos de um emprego paralelo.</p>
+                        </div>
+                        <div class="conteudo-doacoes-presente">
+                            <h2 class="conteudo-doacoes-sbt">Presente</h2>
+                            <p class="conteudo-doacoes-p">Fez sua doação? Que tal receber um presente nosso?<br/>
+                                Basta enviar um e-mail para autusuporte@gmail.com com o valor da doação e a mensagem: "quero o presente".</p>
+                        </div>
+                        <article class="conteudo-doacoes-imgpix">Incluir imagem do pix</article>
+                        <div class="conteudo-doacoes-pix">
+                            <p class="conteudo-doacoes-p">autusuporte@gmail.com<br/>
+                                Essa é nossa chave PIX, gerada para agilizar todo o processo de transferência bancária, tornando-a imediata e isenta de custos.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="conteudo-contato">
