ajustando grid e fale conosco

--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
                 </div>
                 <div class="conteudo-contato">
                     <span id="contato" class="titulos">Fale Conosco</span>
-                    <h3>Email</h3>
+                    <h3 class="contato-sbt">Email</h3>
                     <a>automatetutoriais@hotmail.com</a>
-                    <h3>Telegram</h3>
+                    <h3 class="contato-sbt">Telegram</h3>
                     <p>- AutoHotKey e Automate: @noslined047</p>
                     <p>- Python: @at_python</p>
-                    <h3>Servidor do Discord</h3>
-                    <p>- https://discord.gg/gygZ9eF</p>
+                    <h3 class="contato-sbt">Servidor do Discord</h3>
+                    <a><p>- https://discord.gg/gygZ9eF</p></a>
                 </div>
             </div>
         <aside class="menu-direita">
